[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/retro_gaming/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Background.png" type="Texture" id=2]
[ext_resource path="res://UI/StartMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 180.0 ],
"_edit_vertical_guides_": [ 320.0 ]
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
texture = ExtResource( 2 )

[node name="Space" type="Label" parent="."]
margin_left = 221.0
margin_top = 70.0
margin_right = 361.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "Space"

[node name="Clash" type="Label" parent="."]
margin_left = 281.0
margin_top = 107.0
margin_right = 421.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "Clash!"

[node name="VSplitContainer" type="VBoxContainer" parent="."]
margin_left = 263.0
margin_top = 203.0
margin_right = 373.0
margin_bottom = 292.0

[node name="Start" type="Button" parent="VSplitContainer"]
margin_right = 110.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar"
flat = true

[node name="Settings" type="Button" parent="VSplitContainer"]
margin_top = 31.0
margin_right = 110.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Controles"
flat = true

[node name="Exit" type="Button" parent="VSplitContainer"]
margin_top = 62.0
margin_right = 110.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 4 )
text = "Sair"
flat = true

[connection signal="mouse_entered" from="VSplitContainer/Start" to="." method="_on_Start_mouse_entered"]
[connection signal="mouse_exited" from="VSplitContainer/Start" to="." method="_on_Start_mouse_exited"]
[connection signal="pressed" from="VSplitContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="mouse_entered" from="VSplitContainer/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="VSplitContainer/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="VSplitContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="VSplitContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="VSplitContainer/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="VSplitContainer/Exit" to="." method="_on_Exit_pressed"]
